set more breakpoints, unknown overflow in admin-panel TO FIX

--- a/php/css/style.css
+++ b/php/css/style.css
@@ -2622,7 +2622,7 @@ body>footer>nav>ul>li>a {
 
 }
 
-.game_content>main hr {
+hr {
   height: 4px;
   border-width: 0;
   background-color: white;
@@ -3800,17 +3800,29 @@ input[type=number] {
   row-gap: 10px;
 }
 
-.admin-content>main>ul>li>section>div>dl div {
+.admin-content>main>ul>li>section>div>dl > div {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  row-gap: 5px;
+
+  justify-content: left;
+  align-items: flex-start;
   width: 100%;
+}
+
+.admin-content>main>ul>li>section>div>dl > div > #Trailer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  word-wrap: break-word; /* Ensures long words break and wrap */
+  overflow-wrap: break-word; /* Alternative for modern browsers */
+  white-space: normal; /* Ensures wrapping happens */
 }
 
 .admin-content>main>ul>li>section>div>dl div>form {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   width: 100%;
 }
 
@@ -4855,6 +4867,18 @@ body>#notification>button {
 
   .admin-content>main>ul {
     max-width: 1000px;
+  }
+
+  .admin-content>main>ul>li>section>div>dl > div {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .admin-content>main>ul>li>section>div>dl > div > form {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 
   #popup>section {
